# hackomania-2026

./: .gitignore  CONTRIBUTING.md  DETECTION_GUIDE.md  INDEX.md  INSTALLATION.md  LICENSE  OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TESTING_GUIDE.md  config.example.json  content.css  content.js  create_icons.py  getting-started.html  manifest.json  package-lock.json  popup.html  popup.js  service-worker.js  setup-icons.sh  test-page.html  test_ch.py
backend/: .gitignore  audio_route.py  db.js  image_route.py  main.py  news_service.py  package-lock.json  package.json  pyproject.toml  requirements.txt  route.py  server.js  synthid_route.py
backend/src/extraction/: benchmark_extraction.py  robust_extractor.py  synthid_bypass.py  synthid_codebook_extractor.py  watermark_remover.py
images/: README.md
src/: hello.html
sureanot-extension/: index.html  manifest.json  package-lock.json  package.json  popup.html  tailwind.config.js  vite.config.js
sureanot-extension/src/: App.css  App.jsx  background.js  content.jsx  options.jsx  popup.jsx
sureanot-extension/src/components/: AudioScanOverlay.jsx  ImageScanOverlay.jsx  ImageWarningBanner.jsx  InjectedOverlay.jsx  KampungToggle.jsx  SettingsForm.jsx
sureboh-extension/: dist.crx  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
sureboh-extension/src/: App.jsx  background.js  content.jsx  options.html  options.jsx
sureboh-extension/src/components/: AnalyzeManualButton.jsx  ExplainabilityTooltip.jsx  HWZAnalyzeButton.jsx  ImageScanOverlay.jsx  InjectedOverlay.jsx  (+3 more)
